--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(ProjectName LANGUAGES C VERSION 0.1.0)
+project(qtree LANGUAGES C VERSION 0.1.0)
 
 message(STATUS "CMake ${CMAKE_VERSION}")
 
@@ -13,11 +13,16 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif()
 
-add_executable(main src/main.c)
+add_executable(qtree src/main.c)
 
-target_compile_options(main PRIVATE
+target_compile_options(qtree PRIVATE
     -Werror
     -Wall
     -Wextra
     -Wpedantic
+)
+
+install(TARGETS qtree
+    DESTINATION bin
+    COMPONENT qtree
 )
